Minor CSS fix for line alignment of Next Update Check string.
git-svn-id: http://public-cvs.squiz.net/svn/squiz-framework@1014 1b08cf3a-d8dc-418b-9366-0d0b919357ef

--- a/Systems/Patching/Web/Templates/PatchingScreen.css
+++ b/Systems/Patching/Web/Templates/PatchingScreen.css
@@ -75,6 +75,10 @@ div.PatchingScreen-activateWrap span.PatchingScreen-systemid {
     margin-left: 45px;
 }
 
+.PatchingScreen-nextCheckString {
+    line-height: 24px;
+}
+
 /* New Updates Table */
 #newUpdates-table td {
     vertical-align: top;
